--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scripts": "1.1.0",
-    "reactstrap": "^5.0.0-alpha.4"
+    "reactstrap": "^5.0.0-alpha.4",
+    "spotify-web-api-js": "^0.23.0"
   },
   "scripts": {
     "start": "react-scripts start",
